[gd_scene load_steps=11 format=3 uid="uid://difgvseqsh0oi"]

[ext_resource type="Script" uid="uid://gekhwl5wso01" path="res://scenes/ui/level_ui_canvas_layer.gd" id="1_6626q"]
[ext_resource type="Theme" uid="uid://dd4dcad42nkd5" path="res://resources/ui/main_theme.tres" id="1_kahbu"]
[ext_resource type="Shader" uid="uid://1mtdvgwtv3pc" path="res://shaders/screen_—Årt_light.gdshader" id="1_lnnm2"]
[ext_resource type="Texture2D" uid="uid://cib1ehksivmak" path="res://assets/ui/ui-icons.png" id="2_liwlu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_so7ii"]
shader = ExtResource("1_lnnm2")
shader_parameter/resolution = Vector2(320, 180)
shader_parameter/scan_line_amount = 0.238
shader_parameter/warp_amount = 0.0
shader_parameter/vignette_amount = 0.0
shader_parameter/vignette_intensity = 0.3
shader_parameter/grille_amount = 0.0
shader_parameter/brightness_boost = 1.321

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uaaqp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d2wgj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0cb43"]
atlas = ExtResource("2_liwlu")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrkbq"]
atlas = ExtResource("2_liwlu")
region = Rect2(32, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7sx4"]
atlas = ExtResource("2_liwlu")
region = Rect2(0, 0, 8, 8)

[node name="LevelUiCanvasLayer" type="CanvasLayer"]
script = ExtResource("1_6626q")

[node name="ShaderColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_so7ii")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
material = SubResource("ShaderMaterial_uaaqp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_kahbu")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ScoreHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_d2wgj")
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ScoreHBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_0cb43")
stretch_mode = 3

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/ScoreHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score: 0000"

[node name="EffectsHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/EffectsHBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_nrkbq")
stretch_mode = 3

[node name="EffectsLabel" type="Label" parent="MarginContainer/VBoxContainer/EffectsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Boost: -25%"

[node name="LifesHBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/LifesHBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_x7sx4")
stretch_mode = 3

[node name="LifesLabel" type="Label" parent="MarginContainer/LifesHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lifes: 3"
